<resources>
    <string name="app_name">PistoChat</string>
    <string name="select_user">Select User</string>
    <string name="story">Story</string>
    <string name="update_profile">Update Profile</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="online">online</string>
    <string name="my_story">My Story</string>
    <string name="type_a_status">Type a status</string>
    <string name="type_a_message">Type a message</string>

    <!--  Delete and archive chats  -->
    <string name="swipe_delete">Delete</string>
    <string name="swipe_archive">Archive</string>
    <string name="conversation_deleted">Conversation deleted</string>
    <string name="snackbar_label_undo">Undo</string>
    <string name="conversation_archived">Conversation archived</string>
    <string name="conversation_unarchived">Conversation unarchived</string>
    <string name="swipe_unarchive">Unarchive</string>

    <!--  Navigation drawer   -->
    <string name="nav_profile">Profile</string>
    <string name="nav_note_to_self">Note to Self</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_sign_out">Sign out</string>
    <string name="nav_archived_chats">Archived Chats</string>
    <string name="header_archived_chats">Archived Chats</string>
    <string name="no_conversations_yet">No conversations yet.</string>
    <string name="no_archived_chats">No Archived Chats.</string>
    <string name="my_qr_code">My QR Code</string>
    <string name="scan_qr_code">Scan QR Code</string>
    <string name="select_contact">Select Contact</string>
    <string name="user_profile">User Profile</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="about">About</string>
    <string name="save">save</string>
    <string name="ok">OK</string>

</resources>