<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:id="@+id/main"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_profile"
            android:iconTint="@color/secondary_text"
            android:title="@string/nav_profile" />

        <item
            android:id="@+id/nav_note"
            android:visible="false"
            android:icon="@drawable/ic_round_sticky_note_2_24"
            android:title="@string/nav_note_to_self" />

        <item
            android:id="@+id/nav_archive"
            android:icon="@drawable/ic_round_archive_24"
            android:title="@string/nav_archived_chats" />
    </group>

    <group
        android:id="@+id/qr"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_my_qr_code"
            android:icon="@drawable/ic_my_qr_code"
            android:title="@string/my_qr_code" />

        <item
            android:id="@+id/nav_scan_qr_code"
            android:icon="@drawable/ic_scan_qr_code"
            android:title="@string/scan_qr_code" />
    </group>

    <group
        android:id="@+id/misc"
        android:checkableBehavior="single">
        <item
            android:visible="false"
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_round_settings_24"
            android:title="@string/nav_settings" />

        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_logout"
            android:title="@string/nav_sign_out" />
    </group>

</menu>