<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"
    tools:context=".activities.ReceiverProfileActivity">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/profileDiscard"
        android:layout_width="@dimen/_30sdp"
        android:layout_height="@dimen/_30sdp"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginLeft="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_12sdp"
        android:src="@drawable/ic_back"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@drawable/background_icon"
        android:padding="@dimen/_6sdp"
        android:tint="@color/white"
        android:scaleType="fitCenter"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_profile"
        android:textSize="@dimen/_14ssp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="@+id/profileDiscard"
        app:layout_constraintBottom_toBottomOf="@id/profileDiscard"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/_16sdp"
        android:background="@drawable/background_content_bottom"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profileDiscard"
        >

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <FrameLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    >

                    <com.makeramen.roundedimageview.RoundedImageView
                        android:layout_width="@dimen/_180sdp"
                        android:layout_height="@dimen/_180sdp"
                        android:src="@drawable/ic_blank_profile"
                        android:id="@+id/profile_image"
                        android:layout_marginTop="@dimen/_30sdp"
                        app:riv_corner_radius="@dimen/_90sdp"
                        android:adjustViewBounds="true"
                        android:scaleType="centerCrop"
                        />

                </FrameLayout>

                <TextView
                    android:id="@+id/profile_name"
                    android:layout_marginTop="40dp"
                    android:layout_width="250dp"
                    android:hint="@string/enter_your_name"
                    android:imeOptions="actionNext"
                    android:maxLength="20"
                    android:inputType="text"
                    android:textColor="@color/black"
                    android:layout_height="40dp"
                    android:background="@drawable/bgbox_2"
                    android:textAlignment="center"
                    android:gravity="center"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    />

                <TextView
                    android:id="@+id/profile_about"
                    android:layout_marginTop="40dp"
                    android:layout_width="@dimen/_260sdp"
                    android:hint="@string/about"
                    android:textColor="@color/black"
                    android:imeOptions="actionDone"
                    android:maxLength="120"
                    android:layout_height="@dimen/_100sdp"
                    android:background="@drawable/bgbox_2"
                    android:textAlignment="center"
                    android:textSize="20sp"
                    android:gravity="center"
                    android:inputType="textMultiLine"
                    android:scrollHorizontally="false"
                    android:padding="@dimen/_2sdp"
                    android:visibility="gone"
                    />

                <Button
                    android:backgroundTint="@color/primary"
                    android:layout_marginTop="40dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ok"
                    android:id="@+id/save_profile"
                    />

            </LinearLayout>

        </ScrollView>

    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>